--- a/foundations/02-class-id-selectors/index.html
+++ b/foundations/02-class-id-selectors/index.html
@@ -10,8 +10,8 @@
   <body>
     <p>Number 1 - I'm a class!</p>
     <div id="number2">Number 2 - I'm one ID.</div>
-    <p class="number3">Number 3 - I'm a class, but cooler!</p>
-    <div class ="anotherID">Number 4 - I'm another ID.</div>
+    <p class="number3 fontsize">Number 3 - I'm a class, but cooler!</p>
+    <div class ="anotherID fontsize">Number 4 - I'm another ID.</div>
     <p>Number 5 - I'm a class!</p>
   </body>
 </html>
